
2010-05-28 Version 0.3.9

  * new file/symbol search window
  * word-completion can now be expanded to symbol lookup by pressing Ctrl-Space again
  * installation now reenables package, in case you told VS to skip loading it
  * now using machine-translated SDK instead of std.windows
  * fixed COM leak
  * fix: file opened through "goto definition"/"find in files" sometimes warns
    "already opened in editor"
  * fix: "goto error" sometimes would not jump to error with message 
    "cannot find the file specified"
  * fix: last version would not let you select any but the first entry of an
    expansion list
  * symbol information now updated after project load, it's no longer necessary
    to build once

2010-06-03 Version 0.3.10

  * updated to cv2pdb 0.13 which allows debugging under plain VS2010 and is
    more stable when evaluating arrays in the debugger
  * now built with debug symbols to allow crash analysis. See
    [downloads/visuald_pdb.zip] for symbols for the latest version
  * fix: project property dialog did not popup with saved D version
  * added the possibility to stop a build
  * new logo now used in about box

2010-06-10 Version 0.3.11

  * error messages now forwarded to error list
  * Visual D settings now stored in the user area of the registry
  * added library search path to project settings (you need to append ";%LIB%" to
    the LIB setting in DMD's sc.ini for this to work)
  * command VisualD.ShowScope now displays the scope of the caret in the 
    status line
  * Visual D now creates its own menu, expecting to be filled with more commands
    in the future and to avoid cluttering other menus
  * Search window commands are now called VisualD.SearchFile and VisualD.SearchSymbol
    (you might need to reassign keyboard shortcuts)
  * Thanks to Alix Pexton, the web site has a professional looking new logo. 

2010-06-19 Version 0.3.12

  * tried to avoid crashes when launching debugger in VS2010
